# pic2lcd

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml  release.yml
src/: main.rs
